# CS50x

./: .gitignore
W01_L01_C/: .clang-format  .clang-tidy  CMakeLists.txt  agree.c  calculator.c  compare.c  cs50.c  hello.c  mario.c  meow.c
W01_P01_Me/: CMakeLists.txt  main.c
W02_L01_Arrays/: CMakeLists.txt  greet.c  hi.c  length.c  scores.c  status.c  string.c  uppercase.c
W03_L01_Algorithms/: CMakeLists.txt  iteration.c  phonebook.c  recursion.c  search.c
W04_L01_Memory/: .clang-tidy  CMakeLists.txt  addresses.c  compare.c  copy.c  cp.c  garbage.c  get.c  memory.c  phonebook.c  swap.c
