cmake_minimum_required(VERSION 3.29)
project(W01_L01_C C)

set(CMAKE_C_STANDARD 17)

add_executable(hello hello.c cs50.c)
add_executable(compare compare.c cs50.c)
add_executable(agree agree.c cs50.c)
add_executable(meow meow.c)
add_executable(calculator calculator.c cs50.c)
add_executable(mario mario.c cs50.c)
