cmake_minimum_required(VERSION 3.29)
project(W02_L01_Arrays C)

set(CMAKE_C_STANDARD 17)

add_executable(W02_L01_Arrays scores.c cs50.c)
add_executable(hi hi.c cs50.c)
add_executable(length length.c cs50.c)
add_executable(string string.c cs50.c)
add_executable(uppercase uppercase.c cs50.c)
add_executable(greet greet.c cs50.c)
add_executable(status status.c)
